Fix user multi select with shift

--- a/src/style/settings.scss
+++ b/src/style/settings.scss
@@ -61,7 +61,7 @@
 
 // New new userGrid
 
-.user-grid {
+#userGrid {
 	display: grid;
 	grid-template-columns: repeat(10, auto);
 	min-width: 600px;
